# spd

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  STYLE.md  bad.patch  commands.sh  diff.diff  downloaded_recording.m4a  migrate.py  pyproject.toml  temp_memorization_dataset.py  test.py  vis.py
.claude/: CLAUDE_local.md
.github/workflows/: checks.yaml  claude.yaml
docs/coverage/: coverage.txt
notebooks/: 2025-06-26-20-07_EnvironmentTest.ipynb
papers/Attribution_based_Parameter_Decomposition/: apd_paper.md
papers/Stochastic_Parameter_Decomposition/: spd_paper.md
spd/: component_summaries.html  component_summaries.md  configs.py  constants.py  core_metrics_and_figs.py  data.py  data_utils.py  figures.py  git_utils.py  interp.py  log.py  losses.py  metrics.py  metrics_and_figs.py  module_utils.py  nathu_dev_utils.py  plotting.py  registry.py  run_spd.py  slurm_utils.py  spd_interp.py  user_cosine_sim.py  user_metrics_and_figs.py.example  utils.py  wandb_utils.py
spd/clustering/: activations.py  dev.ipynb  dev_grouping.ipynb  generate_clustering_report.py  grep_repr.py  grouping.py  load_model_example.py  merge.py  merge_matrix.py  sweep.py  test.py
spd/clustering/old/: embed_vis.py  embedding.py  grouping.py
spd/evals/: analyze_evals.py  run_evals.py
spd/experiments/cis/: cis_100-40_config.yaml  cis_decomposition.py  generate_plots.py  models.py  plotting.py  train_cis.py
spd/experiments/lm/: app.py  component_viz.py  gemma_config.yaml  lm_decomposition.py  lm_sweep_config.yaml  play.py  plot_embedding_components.py  ss_attn_config.yaml  ss_config.yaml  ss_emb_config.yaml  ss_ml_config.yaml  ts_config.yaml
spd/experiments/lm/analysis/: component_token_table.py  component_viz.py
spd/experiments/memorization/: __init__.py  decomp_config_32-128-1x_pnl.yaml  decomp_config_32-128-2p8x_pnl.yaml  decomp_config_32-128-2x.yaml  decomp_config_32-128-2x_pnl.yaml  decomp_config_32-128-2x_task.yaml  decomp_config_32-128-2x_task_pnl.yaml  memorization_dataset.py  memorization_decomposition.py  memorization_train_config.yaml  models.py  plotting.py  sweep_multiplier.yaml  train_memorization.py  train_sweep_d_model.yaml  train_sweep_d_model_small.yaml
spd/experiments/modular_addition/: download_checkpoint.py  models.py  modular_addition_config.yaml  modular_addition_config_pnl.yaml  modular_addition_decomposition.py  plotting.py  test_model.py
spd/experiments/resid_mlp/: models.py  plotting.py  resid_mlp1_config.yaml  resid_mlp2_config.yaml  resid_mlp3_config.yaml  resid_mlp_config.yaml  resid_mlp_dataset.py  resid_mlp_decomposition.py  resid_mlp_interp.py  resid_mlp_sweep_config.yaml  train_resid_mlp.py
spd/experiments/tms/: models.py  plotting.py  tms_40-10-id_config.yaml  tms_40-10_config.yaml  tms_5-2-id_config.yaml  tms_5-2_config.yaml  tms_5-2_config_bern.yaml  tms_5-2_config_conc.yaml  tms_5-2_config_hard.yaml  tms_config.yaml  tms_decomposition.py  tms_sweep_config.yaml  train_tms.py
spd/models/: component_model.py  component_utils.py  components.py  sigmoids.py
spd/nathu_notebooks/: dev_plotting.ipynb  plot_p_anneal.ipynb  plot_sigmoids.ipynb  test_hungarian_performance.ipynb
spd/scripts/: demo_hparam_sweep.yaml  gate_sweep.yaml  gate_sweep_resweep_sparsity.yaml  importance_minimality_sweep.yaml  memorization_hparam_sweep.yaml  mod_add_hparam_sweep.yaml  p_anneal_dev.yaml  p_anneal_pnorm1_baseline.yaml  p_anneal_sweep.yaml  run.py  sweep_params.yaml.example
spd/sweeps/: __init__.py  run_grid_search.py  sweep.py  sweep_params.yaml  sweep_params_ml.yaml
spd/utils/: component_utils.py  data_utils.py  general_utils.py  git_utils.py  linear_sum_assignment.py  module_utils.py  run_utils.py  slurm_utils.py  target_ci_solutions.py  target_solutions.py  wandb_utils.py
sweeps/: sweep.sh  sweep_config.yaml
tests/: test_component_model.py  test_data_utils.py  test_grid_search.py  test_module_utils.py  test_permutation.py  test_resid_mlp.py  test_run_sweep_params.py  test_scripts_run.py  test_spd_losses.py  test_target_ci_solutions.py  test_target_solutions.py  test_tms.py
tests/scripts_run/: test_grid_search.py  test_main.py
